# accounting

./: .env.example  .gitignore  Makefile  README.md  TERMINOLOGIJA.md  compose.obs.yml  docker-compose.yml
bhkb-api/: Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
bhkb-api/alembic/: env.py
bhkb-api/alembic/versions/: 5d5e2b6f12ec_a3_core_intake.py  a03f5cdfa397_add_case_file_metadata_fields.py
bhkb-api/api/: Dockerfile  alembic.ini  pyproject.toml
bhkb-api/api/alembic/: env.py
bhkb-api/api/alembic/versions/: 0001_initial_schema.py
bhkb-api/api/app/: embeddings.py  exctract.py  ingest.py  main.py  meta.py  schema.sql  utils.py
bhkb-api/api/app/core/: config.py
bhkb-api/api/app/db/: __init__.py  migrations.py  models.py  session.py  sync.py
bhkb-api/app/: main.py  meta.py  utils.py
bhkb-api/app/core/: config.py  logging.py
bhkb-api/app/db/: __init__.py  models.py  session.py
bhkb-api/app/routers/: search.py
bhkb-api/app/services/: __init__.py  search.py
bhkb-api/app/watcher/: __init__.py  config.py  db.py  errors.py  pathing.py  service.py  snapshot.py
bhkb-api/tests/: conftest.py  test_config.py  test_logging.py  test_main.py  test_meta.py  test_observability_configs.py  test_routers_search.py  test_utils.py
bhkb-api/tests/e2e/: test_health_smoke.py
bhkb-api/tests/integration/: test_migrations_intake.py
bhkb-api/tests/unit/: test_db.py  test_main.py  test_observability_configs.py  test_services_search.py
bhkb-api/watcher/: __init__.py  run.py
bhkb-api/workers/: __init__.py  run.py
(+20 files in other folders)
