[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bhkb-api"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "psycopg[binary]",
  "psycopg2-binary",
  "pydantic>=2.0",
  "httpx",
  "beautifulsoup4",
  "lxml",
  "pypdf",
  "numpy",
  "scikit-learn",
  "minio>=7.1.0,<7.2.0",  # Pin to 7.1.x - v7.2+ has breaking API changes
  "pydantic-settings",
  "psycopg-pool",
  "sqlalchemy>=2.0",
  "alembic",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pyyaml",
  "prometheus-client",
  "pathspec>=0.11.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "watcher*"]
